# TW2000

./: index.html  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CanvasView.tsx  EvidenceDashboard.tsx  ForceDirectedMapView.tsx  ItemEditor.tsx  MindMapView.tsx  SearchPalette.tsx  Sidebar.tsx  ThreadView.tsx
src/utils/: db.ts
