[package]
name = "typewriter2000"
version = "1.0.0"
description = "Local-first PKM app with canvas-first interface"
authors = ["Axel58RB"]
license = "MIT"
repository = "https://github.com/Axel58RB/TW2000"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
